--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -34,8 +34,8 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      image: '/media/home.png'
-      image_dark: '/media/home_dark.png'
+      image: '/media/icons/home.png'
+      image_dark: '/media/icons/home_dark.png'
       alt: '이혜원 로고'
       text: ''
 
