--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,8 +37,8 @@ header:
       image: '/uploads/home.png'
       image_dark: '/uploads/home_dark.png'
       alt: '이혜원 로고'
-      
-
+      text: ''
+      link: '/'
 
 # Site footer
 footer:
