--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,7 +37,7 @@ header:
       image: '/uploads/home.png'
       image_dark: '/uploads/home_dark.png'
       alt: '이혜원 로고'
-      text: ''
+      text: '이혜원'
       link: '/'
 
 # Site footer
