--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -23,3 +23,8 @@ mounts:
     target: layouts
   - source: assets
     target: assets
+
+module:
+  mounts:
+    - source: layouts
+      target: layouts
