--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,10 +4,14 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Appearance
+#appearance:
+ # mode: system
+  #color: #ff7b00
+favicon: icon.png
+
 appearance:
-  mode: system
-  color: #ff7b00
-  favicon: icon.png
+  theme_day: a275f7
+  theme_night: dark
 
 # SEO
 marketing:
