--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,9 +14,8 @@ appearance:
   theme_night: black
   font: classic
   font_size: M
-  custom_css:
-    - css/template.css
 
+custom_scss: ["scss/template.scss"]
 
 # SEO
 marketing:
