--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -55,7 +55,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} 이혜원. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
