--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ marketing:
   seo:
     site_type: Person
     local_business_type: ''
-    org_name: '전북대 이혜원'
+    org_name: '전북대학교'
     description: '전북대학교 이혜원 학생의 개인 학술 웹사이트입니다.'
     image: "uploads/avatar.jpg"
     keywords:
