--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,13 +3,14 @@
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-
+#appearance:
+ # mode: system
+  #color: #ff7b00
 favicon: icon.png
 
 appearance:
-  theme_user: custom
-  theme_day: custom
-  theme_night: custom
+  theme_day: ocean
+  theme_night: ocean
   font: classic
   font_size: M
 
